cabal-version: 3.6
name:          hs-rogue-part5
version:       0.0.6.0
synopsis:      Roguelike tutorial in Haskell.
description:   Part 5 of the roguelike tutorial in Haskell.
homepage:
  https://github.com/PPKFS/roguelike-tutorial-parts/tree/part-5

bug-reports:   https://github.com/PPKFS/roguelike-tutorial-parts/issues
license:       MIT
author:        Avery
maintainer:    Avery <ppkfs@outlook.com>
copyright:     2025 Avery
category:      Game
build-type:    Simple
tested-with:   GHC ==9.12.2 || ==9.8.2

executable hs-rogue
  main-is:            Main.hs
  default-extensions:
    DuplicateRecordFields
    LambdaCase
    NoImplicitPrelude
    OverloadedLabels
    OverloadedStrings
  build-depends:
      , base
      , bearlibterminal
      , containers
      , enummapset
      , mtl
      , optics
      , random
      , random
      , roguefunctor
      , text
  hs-source-dirs:   app
  default-language: GHC2021
  ghc-options: -Wall
  other-modules:
      HsRogue.Map
      HsRogue.MapGen
      HsRogue.Object
      HsRogue.Prelude
      HsRogue.Renderable
      HsRogue.Viewshed
      HsRogue.World