cabal-version: 3.6
name:          hs-rogue-part0
version:       0.0.0.0
synopsis:      Roguelike tutorial in Haskell.
description:   Part 0 of the roguelike tutorial in Haskell.
homepage:
  https://github.com/PPKFS/roguelike-tutorial-parts/tree/part-0

bug-reports:   https://github.com/PPKFS/roguelike-tutorial-parts/issues
license:       MIT
author:        Avery
maintainer:    Avery <ppkfs@outlook.com>
copyright:     2024-2025 Avery
category:      Game
build-type:    Simple
tested-with:   GHC ==9.6.7 || ==9.8.2

executable hs-rogue
  main-is:            Main.hs
  default-extensions:
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings

  build-depends:
    , base             >=4.19.1.0
    , bearlibterminal
    , containers
    , random
    , roguefunctor

  hs-source-dirs:     app
  default-language:   GHC2021
  ghc-options:        -Wall
